fix: jumping progress bar

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -19,8 +19,8 @@
 #bar-container {
     width: 100%;
     height: 20px;
-    top: 30px;
+    /* top: 30px; */
     outline: #1e8fff9a solid 1px;
     border-radius: .25rem;
     margin: 0px 15px 0px 15px;
-  }
+}
